_sass/_blog.scss
.posts {
  margin: 20px auto 40px;
  padding-left: 0px;
  font-size: 1.5em;

  li {
    list-style: none;
  }
}

.entry-title {
  color: $primary-color;
  font-weight: 600!important;
  font-size: 30px;
  margin-top: 30px;
  margin-bottom: 0px;
  padding: 20px;
  text-decoration: none;
}

.entry-metadata {
  font-size: 14px;
}

.entry-comments {
  width: 100%;
  max-width: 768px;
  margin-top: 30px;
}

.entry-readMore {
  color:$primary-color;
  font-size: 16px;
  margin-left: 10px;
  font-weight: 600;
}

.entry-main-image {
  max-width: 100vw;
}

.entry-image-credits{
  color: $accent-color;
  font-size: 12px;
  margin-top: 5px;
}

.entry-content {
  font-size: 20px;
  line-height: 32px;
  font-weight: 300;
  padding: 5px;
  max-width: 768px;

  p {
    font-family: $font-family-base;
  }

  h3 {
    margin-top: 50px;
    color: $primary-color;
  }
}

.entry-anchor-to-content{
  text-decoration: inherit;
  color: inherit;

  &:visited {
    text-decoration: inherit;
    color: inherit;
  }
}

.entry-image-link {
  padding: 20px 0px;

  &:hover {
    cursor: pointer;
  }
}

